# ZRK_MIPT_Project

./: CMakeLists.txt  CMakeLists.txt.user.52bafe8  FlyingObject.cpp  FlyingObject.h  Launcher.cpp  Launcher.h  Missile.cpp  Missile.h  Plane.cpp  Plane.h  README.md  databasecontroller.cpp  databasecontroller.h  databasewindow.cpp  databasewindow.h  databasewindow.ui  loop.cpp  loop.h  main.cpp  mainwindow.cpp  mainwindow.h  models.cpp  models.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  zrkdb.sqlite  zrkdb.sqlite-journal
Ocean_map/: ne_50m_ocean-fgdc.xml  ocean.dbf  ocean.qlr  ocean.qml
Zrk_on_map/: Circle_zrk_on_map.dbf  Circle_zrk_on_map.shp  Circle_zrk_on_map.shx  map.dbf  map.qlr  map.qml  zone_zrk.dbf  zone_zrk.shx  zrk.dbf  zrk.qlr  zrk.qml  zrk.shp
icons/: db_icon.svgZone.Identifier  plane1_1.svgZone.Identifier
